--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       @media (min-width: 700px) {
         .amp {
           font-size: 3vw;
-          padding: 0 30px;
+          line-height: 8vw;
         }
       }
     </style>
