Add date and links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Katelyn &amp; Mark</title>
 
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:100' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
 
     <style media="screen">
       html,body {
@@ -32,6 +33,70 @@
           padding: 0 30px;
         }
       }
+      h2 {
+        margin-top: 2vh;
+        color: #FF8686;
+        text-align: center;
+        font-family: 'Lora', serif;
+        font-weight: 700;
+        font-size: 6vw;
+      }
+      h2 sup {
+        font-size: 2vw;
+        text-transform: uppercase;
+      }
+      @media (min-width: 700px) {
+        h2 {
+          font-size: 4vw;
+        }
+      }
+      h3 {
+        margin-top: 3vh;
+        color: #FF8686;
+        text-align: center;
+        font-family: 'Alegreya Sans', sans-serif;
+        font-weight: 100;
+        font-size: 4vw;
+      }
+      h3 a {
+        color: #525866;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid #525866;
+        transition: all .2s linear;
+      }
+      h3 a:hover {
+        color: #FF8686;
+        border-bottom-color: #FF8686;
+      }
+      @media (min-width: 700px) {
+        h3 {
+          font-size: 2vw;
+        }
+      }
+      h4 {
+        margin-top: 3vh;
+        text-align: center;
+        font-size: 3vw;
+      }
+      h4 a {
+        color: #525866;
+        font-family: 'Alegreya Sans', sans-serif;
+        text-decoration: none;
+        display: inline-block;
+        border-bottom: 1px solid #525866;
+        transition: all .2s linear;
+        letter-spacing: 1px;
+      }
+      h4 a:hover {
+        color: #FF8686;
+        border-bottom-color: #FF8686;
+      }
+      @media (min-width: 700px) {
+        h4 {
+          font-size: 1.5vw;
+        }
+      }
       .ground {
         position: fixed;
         bottom: -18vw;
@@ -49,9 +114,9 @@
         min-width: 70px;
       }
       .amp {
-        font-family: 'Playfair Display SC', serif;
+        font-family: 'Amatic SC', cursive;
         font-size: 4vw;
-        color: #BE6D6C;
+        color: white;
         line-height: 12vw;
         display: inline-block;
         vertical-align: top;
@@ -66,6 +131,13 @@
   </head>
   <body>
     <h1>Katelyn <span class="amp">&amp;</span> Mark</h1>
+
+    <h2>April 30<sup>th</sup>, 2016</h2>
+
+    <h3><a href="https://goo.gl/W7YLIj">Map and Directions</a></h3>
+
+    <h4><a href="mailto:sayhello@katelynandmark.com">Questions?</a></h4>
+
     <img src="birdus.svg" alt="" class="us" />
     <img src="ground.svg" alt="" class="ground" />
 
