Update content and colors

--- a/thecouple/index.html
+++ b/thecouple/index.html
@@ -16,18 +16,31 @@
   <body>
     <h1>Katelyn <span class="amp">&amp;</span> Mark</h1>
 
-    <h2>April 30<sup>th</sup>, 2016</h2>
+    <h2>The Happy Couple</h2>
+
+    <p>
+      Katelyn Jayne Hanke<br>
+      Mark Alan Garrigan
+    </p>
+
+    <div class="marklyn">
+      <div class="content">
+        <img src="/us3.jpg" alt="" />
+        <img src="/us2.jpg" alt="" />
+        <img src="/us1.jpg" alt="" />
+      </div>
+    </div>
 
     <h3><a href="/theplan">What's the plan for the day?</a></h3>
-
-    <h3><a href="/thecouple">Who's getting married?</a></h3>
 
     <h3><a href="https://goo.gl/W7YLIj">How do I get there?</a></h3>
 
     <h3><a href="mailto:sayhello@katelynandmark.com">More questions?</a></h3>
 
-    <img src="birdus.svg" alt="" class="us" />
-    <img src="ground.svg" alt="" class="ground" />
+    <h3><a href="/">Home</a></h3>
+
+    <img src="/birdus.svg" alt="" class="us" />
+    <img src="/ground.svg" alt="" class="ground" />
 
     <!-- <form action="https://getsimpleform.com/messages?form_api_token=d5eace4db96bb9372794c77bd3c1f231" method="post"> -->
       <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
