--- a/theplan/index.html
+++ b/theplan/index.html
@@ -16,9 +16,19 @@
   <body>
     <h1>Katelyn <span class="amp">&amp;</span> Mark</h1>
 
-    <h2>April 30<sup>th</sup>, 2016</h2>
+    <h2>The Plan</h2>
 
-    <h3><a href="/theplan">What's the plan for the day?</a></h3>
+    <p>
+      We look forward to welcoming guests at our casual coffee and cake reception any time from 10am to 2pm on April 30, 2016.
+    </p>
+
+    <p>
+      Coffee not your thing? That's cool, Mark can't stand it! We'll have other things to drink as well.
+    </p>
+
+    <p>
+      Chocolate cake not your thing? How about Classic Yellow? No? Lemon? White Chocolate Raspberry? Carrot? Salted Carmel?? If you've made it this far I guess there is no pleasing you! Don't worry, we'll make sure there's other food for you to enjoy!
+    </p>
 
     <h3><a href="/thecouple">Who's getting married?</a></h3>
 
@@ -26,8 +36,10 @@
 
     <h3><a href="mailto:sayhello@katelynandmark.com">More questions?</a></h3>
 
-    <img src="birdus.svg" alt="" class="us" />
-    <img src="ground.svg" alt="" class="ground" />
+    <h3><a href="/">Home</a></h3>
+
+    <img src="/birdus.svg" alt="" class="us" />
+    <img src="/ground.svg" alt="" class="ground" />
 
     <!-- <form action="https://getsimpleform.com/messages?form_api_token=d5eace4db96bb9372794c77bd3c1f231" method="post"> -->
       <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
